--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@types/uuid": "^9.0.8",
+		"uuid": "^9.0.1"
+	}
 }
