--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test": "vitest",
-		"lint": "eslint ."
+		"lint": "eslint .",
+		"prepare": "npm run smui-theme",
+		"smui-theme": "smui-theme compile static/smui.css -i src/theme"
 	},
 	"devDependencies": {
+		"@mdi/js": "^7.4.47",
+		"@smui/button": "^7.0.0",
+		"@smui/top-app-bar": "^7.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -21,6 +26,7 @@
 		"eslint": "^9.0.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"smui-theme": "^7.0.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
@@ -31,6 +37,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@smui/segmented-button": "^7.0.0",
+		"@smui/tab": "^7.0.0",
+		"@smui/tab-bar": "^7.0.0",
 		"firebase": "^10.12.2",
 		"uuid": "^10.0.0"
 	}
