--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"devDependencies": {
 		"@mdi/js": "^7.4.47",
 		"@smui/button": "^7.0.0",
+		"@smui/textfield": "^7.0.0",
 		"@smui/top-app-bar": "^7.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-cloudflare": "^4.4.1",
@@ -37,6 +38,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@smui/circular-progress": "^7.0.0",
 		"@smui/segmented-button": "^7.0.0",
 		"@smui/tab": "^7.0.0",
 		"@smui/tab-bar": "^7.0.0",
