--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
 	},
 	"devDependencies": {
 		"@mdi/js": "^7.4.47",
+		"@smui/banner": "^7.0.0",
 		"@smui/button": "^7.0.0",
+		"@smui/common": "^7.0.0",
+		"@smui/icon-button": "^7.0.0",
 		"@smui/textfield": "^7.0.0",
 		"@smui/top-app-bar": "^7.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
