--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
 		"@mdi/js": "^7.4.47",
 		"@smui/banner": "^7.0.0",
 		"@smui/button": "^7.0.0",
+		"@smui/chips": "^7.0.0",
 		"@smui/common": "^7.0.0",
 		"@smui/icon-button": "^7.0.0",
 		"@smui/textfield": "^7.0.0",
 		"@smui/top-app-bar": "^7.0.0",
+		"@smui/touch-target": "^7.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-cloudflare": "^4.4.1",
 		"@sveltejs/kit": "^2.0.0",
