--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@smui/chips": "^7.0.0",
 		"@smui/common": "^7.0.0",
 		"@smui/icon-button": "^7.0.0",
+		"@smui/menu-surface": "^7.0.0",
 		"@smui/textfield": "^7.0.0",
 		"@smui/top-app-bar": "^7.0.0",
 		"@smui/touch-target": "^7.0.0",
