--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0-alpha.20",
 		"vite": "^5.0.3",
+		"vite-plugin-pwa": "^0.20.0",
 		"vitest": "^1.2.0"
 	},
 	"type": "module",
