--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@smui/common": "^7.0.0",
 		"@smui/dialog": "^7.0.0",
 		"@smui/icon-button": "^7.0.0",
+		"@smui/linear-progress": "^7.0.0",
 		"@smui/menu-surface": "^7.0.0",
 		"@smui/textfield": "^7.0.0",
 		"@smui/top-app-bar": "^7.0.0",
