--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
 	"devDependencies": {
 		"@material/typography": "^14.0.0",
 		"@mdi/js": "^7.4.47",
+		"@smui-extra/bottom-app-bar": "^7.0.0",
 		"@smui/banner": "^7.0.0",
 		"@smui/button": "^7.0.0",
 		"@smui/chips": "^7.0.0",
 		"@smui/common": "^7.0.0",
 		"@smui/dialog": "^7.0.0",
+		"@smui/fab": "^7.0.0",
 		"@smui/icon-button": "^7.0.0",
 		"@smui/linear-progress": "^7.0.0",
 		"@smui/menu-surface": "^7.0.0",
