--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"name": "svelte-mood-tracker",
 	"version": "0.0.2",
+	"description": "Mood Tracker",
+	"keywords": ["mood", "track"],
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -13,6 +15,8 @@
 		"prepare": "npm run smui-theme",
 		"smui-theme": "smui-theme compile static/smui.css -i src/theme"
 	},
+	"author": "Francesca Pinna",
+	"license": "MIT",
 	"devDependencies": {
 		"@material/typography": "^14.0.0",
 		"@mdi/js": "^7.4.47",
