--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
 	"name": "svelte-mood-tracker",
 	"version": "0.0.2",
 	"description": "Mood Tracker",
-	"keywords": ["mood", "track"],
+	"keywords": [
+		"mood",
+		"track"
+	],
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -24,12 +27,15 @@
 		"@smui/banner": "^7.0.0",
 		"@smui/button": "^7.0.0",
 		"@smui/chips": "^7.0.0",
+		"@smui/circular-progress": "^7.0.0",
 		"@smui/common": "^7.0.0",
 		"@smui/dialog": "^7.0.0",
 		"@smui/fab": "^7.0.0",
 		"@smui/icon-button": "^7.0.0",
 		"@smui/linear-progress": "^7.0.0",
 		"@smui/menu-surface": "^7.0.0",
+		"@smui/tab": "^7.0.0",
+		"@smui/tab-bar": "^7.0.0",
 		"@smui/textfield": "^7.0.0",
 		"@smui/top-app-bar": "^7.0.0",
 		"@smui/touch-target": "^7.0.0",
@@ -38,6 +44,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tsconfig/svelte": "^5.0.4",
+		"@types/chart.js": "^2.9.41",
 		"@types/eslint": "^8.56.7",
 		"@types/uuid": "^9.0.8",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -54,11 +61,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@smui/circular-progress": "^7.0.0",
-		"@smui/segmented-button": "^7.0.0",
-		"@smui/tab": "^7.0.0",
-		"@smui/tab-bar": "^7.0.0",
-		"@types/chart.js": "^2.9.41",
 		"chart.js": "^4.4.3",
 		"firebase": "^10.12.2",
 		"svelte-chartjs": "^3.1.5",
