--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0-alpha.20",
 		"vite": "^5.0.3",
-		"vitest": "^1.2.0"
+		"vitest": "^1.2.0",
+		"workbox-precaching": "^7.1.0"
 	},
 	"type": "module",
 	"dependencies": {
