--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
 		"@smui/common": "^7.0.0",
 		"@smui/dialog": "^7.0.0",
 		"@smui/fab": "^7.0.0",
+		"@smui/form-field": "^7.0.0",
 		"@smui/icon-button": "^7.0.0",
 		"@smui/linear-progress": "^7.0.0",
 		"@smui/menu-surface": "^7.0.0",
+		"@smui/switch": "^7.0.0",
 		"@smui/tab": "^7.0.0",
 		"@smui/tab-bar": "^7.0.0",
 		"@smui/textfield": "^7.0.0",
